# PyRDR

./: LICENSE  README.md  pyproject.toml
src/PyRDR/: MCRDR.py  RDR.py  SCRDR.py  __init__.py
